--- a/2025-08-13/동기화.md
+++ b/2025-08-13/동기화.md
@@ -117,7 +117,7 @@ signal(S); // S 값 증가, 대기 중인 프로세스 깨움
 1. **상호 배제(Mutual Exclusion)** : 자원은 한 번에 하나의 프로세스만 사용
 2. **점유 대기(Hold and Wait)** : 자원을 가진 상태에서 다른 자원을 기다림
 3. **비선점(No Preemption)** : 자원을 강제로 뺏을 수 없음
-4. **환형 대기(Circular Wait)** : 프로세스들이 원형으로 서로의 자원을 기다림
+4. **원형 대기(Circular Wait)** : 프로세스들이 원형으로 서로의 자원을 기다림
 
 ---
 
