create: add_new_file

--- a/Weekly-homework/2025-08-29_homework/일주일_요약.md
+++ b/Weekly-homework/2025-08-29_homework/일주일_요약.md
@@ -1,1 +1,26 @@
-# today review
+
+---
+
+# 📘 이번 주 총평
+
+## 📝 학습 내용
+
+* **문제정의부터 최종 모델 실행까지** 데이터 분석의 전반적인 과정을 다룸
+* 부족했던 **수학적 개념**을 보완하기 위해 학습 진행
+* 데이터분석 수업에서 단순히 코드를 눌러보는 수준을 넘어서 **직접 실습하고 이해하려는 노력**
+* 캐글 데이터셋을 활용해:
+
+  * **데이터 시각화**
+  * **조건 검색**
+  * **행/열 추가 및 가공** 실습 중심 학습 진행
+
+---
+
+## 💡 느낀 점
+
+* **데이터 샘플링**과 **데이터 마트 기획·설계** 과정이 쉽지 않음을 체감
+* 반복 학습과 실습을 통해 **내 것으로 만드는 과정의 중요성**을 깨달음
+* 꾸준한 연습과 경험이 결국 **실력을 쌓는 핵심**임을 확인한 한 주
+
+---
+
