--- a/Daily-Study-Log/10월_복습_정리/2025-10-19/PyTorch_Sparse_Tensor_조작.ipynb
+++ b/Daily-Study-Log/10월_복습_정리/2025-10-19/PyTorch_Sparse_Tensor_조작.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "70316cda",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "       size=(2, 2), nnz=2, layout=torch.sparse_coo)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bf81dac9",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,9 @@
       "       values=tensor([4, 5, 6]),\n",
       "       size=(2, 3), nnz=3, layout=torch.sparse_coo)\n",
       "\n",
-      "\n"
+      "\n",
+      "tensor([[0, 0, 4],\n",
+      "        [5, 6, 0]])\n"
      ]
     }
    ],
@@ -82,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e3f4075b",
    "metadata": {},
    "outputs": [
@@ -106,7 +108,7 @@
        "       layout=torch.sparse_csr)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
